fix: avoid exceptions in normal request checks